# football-llm-scaling

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: FIGURES.md  METHODS.md  REPRODUCIBILITY.md
notebooks/: 02_eval_harness.ipynb  03_icl_cot_baselines.ipynb  03b_cot_rerun.ipynb  04_scaling_ablation.ipynb  05_consistency_analysis.ipynb  README.md
paper/: ECE590_Project_Proposal.docx
results/: README.md
results/examples/: example_contradictions.md
results/raw/: cot_predictions.json  icl_predictions.json  scaling_predictions_n192.json  scaling_predictions_n384.json  scaling_predictions_n48.json  scaling_predictions_n96.json
results/tables/: baseline_metrics_cot.json  consistency_table.csv  consistency_table.json  disagreement_directionality.json  eval_results_base_repo.json  final_tables.json  regime_counts.json  scaling_metrics.json
scripts/: 01_train_scaling.py  02_run_evaluations.py  03_analyze_results.py  04_make_figures.py  05_dump_contradictions.py  demo_structured_rescue.py  reproduce_paper.sh
src/: aggregate.py  config.py  consistency.py  data.py  evaluation.py  generation.py  metrics.py  parsing.py  plotting.py  prompts.py  structured.py  training.py
tests/: test_aggregate.py  test_consistency.py  test_data.py  test_metrics.py  test_parsing.py  test_structured.py
